--- a/Kountdownliteiphone/kountdown.storyboard
+++ b/Kountdownliteiphone/kountdown.storyboard
@@ -20,19 +20,28 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gr2-7b-Oex">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="100" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gr2-7b-Oex">
                                             <rect key="frame" x="20" y="11" width="194" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fE8-cO-y5D">
-                                            <rect key="frame" x="241" y="11" width="59" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="101" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fE8-cO-y5D">
+                                            <rect key="frame" x="222" y="11" width="78" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="fE8-cO-y5D" firstAttribute="top" secondItem="PxL-dq-3xx" secondAttribute="top" constant="11" id="32t-53-6db"/>
+                                        <constraint firstAttribute="trailing" secondItem="fE8-cO-y5D" secondAttribute="trailing" constant="20" id="G0V-cQ-3N0"/>
+                                        <constraint firstItem="gr2-7b-Oex" firstAttribute="top" secondItem="PxL-dq-3xx" secondAttribute="top" constant="11" id="JW4-gd-zHd"/>
+                                        <constraint firstAttribute="bottom" secondItem="fE8-cO-y5D" secondAttribute="bottom" constant="11" id="LOG-gb-n8J"/>
+                                        <constraint firstItem="gr2-7b-Oex" firstAttribute="leading" secondItem="PxL-dq-3xx" secondAttribute="leading" constant="20" id="lMm-2n-9aZ"/>
+                                        <constraint firstItem="fE8-cO-y5D" firstAttribute="leading" secondItem="gr2-7b-Oex" secondAttribute="trailing" constant="20" id="rzV-ca-gBW"/>
+                                        <constraint firstAttribute="bottom" secondItem="gr2-7b-Oex" secondAttribute="bottom" constant="11" id="uLh-m2-GWm"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="nEh-ti-7DK" kind="push" identifier="toDetail" id="1Ra-iy-9k3"/>
@@ -64,30 +73,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cfF-co-ZeY">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cfF-co-ZeY">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="white-92.png" translatesAutoresizingMaskIntoConstraints="NO" id="5MO-C6-sMK">
-                                <rect key="frame" x="0.0" y="218" width="320" height="90"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="white-92.png" translatesAutoresizingMaskIntoConstraints="NO" id="5MO-C6-sMK">
+                                <rect key="frame" x="0.0" y="239" width="320" height="90"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="90" id="EYn-q7-bm2"/>
+                                    <constraint firstAttribute="height" constant="90" id="LHU-cO-mrG"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="37H-h5-BIx">
-                                <rect key="frame" x="20" y="224" width="280" height="38"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7jE-bP-GLA">
+                                <rect key="frame" x="0.0" y="228" width="320" height="112"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjT-bi-T6L">
-                                <rect key="frame" x="20" y="259" width="280" height="49"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="37H-h5-BIx">
+                                        <rect key="frame" x="20" y="20" width="280" height="38"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="38" id="pnM-c7-NJg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YjT-bi-T6L">
+                                        <rect key="frame" x="20" y="58" width="280" height="34"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="34" id="Usk-7T-RWE"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="15"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="37H-h5-BIx" secondAttribute="trailing" constant="20" id="62J-uz-q8Y"/>
+                                    <constraint firstAttribute="trailing" secondItem="YjT-bi-T6L" secondAttribute="trailing" constant="20" id="Hef-eA-ZpG"/>
+                                    <constraint firstItem="37H-h5-BIx" firstAttribute="leading" secondItem="7jE-bP-GLA" secondAttribute="leading" constant="20" id="Wox-YA-e5e"/>
+                                    <constraint firstItem="YjT-bi-T6L" firstAttribute="leading" secondItem="7jE-bP-GLA" secondAttribute="leading" constant="20" id="e6r-a5-OaS"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cfF-co-ZeY" firstAttribute="leading" secondItem="d3f-gg-gYX" secondAttribute="leading" id="7fy-Jy-Lc1"/>
+                            <constraint firstItem="7jE-bP-GLA" firstAttribute="centerY" secondItem="cfF-co-ZeY" secondAttribute="centerY" id="Ggf-dr-Bml"/>
+                            <constraint firstItem="cfF-co-ZeY" firstAttribute="top" secondItem="d3f-gg-gYX" secondAttribute="top" id="Le8-fh-j5d"/>
+                            <constraint firstItem="7jE-bP-GLA" firstAttribute="width" secondItem="cfF-co-ZeY" secondAttribute="width" id="MKP-AD-0E0"/>
+                            <constraint firstItem="5MO-C6-sMK" firstAttribute="width" secondItem="cfF-co-ZeY" secondAttribute="width" id="TPa-ih-Unv"/>
+                            <constraint firstAttribute="trailing" secondItem="5MO-C6-sMK" secondAttribute="trailing" id="ZhE-UE-lVp"/>
+                            <constraint firstAttribute="bottom" secondItem="cfF-co-ZeY" secondAttribute="bottom" id="aGX-3J-MuI"/>
+                            <constraint firstItem="5MO-C6-sMK" firstAttribute="centerY" secondItem="cfF-co-ZeY" secondAttribute="centerY" id="aX3-R8-W99"/>
+                            <constraint firstItem="5MO-C6-sMK" firstAttribute="leading" secondItem="d3f-gg-gYX" secondAttribute="leading" id="nhe-67-8Q1"/>
+                            <constraint firstAttribute="trailing" secondItem="cfF-co-ZeY" secondAttribute="trailing" id="pGX-Ly-QrV"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="a6H-GG-fNf"/>
                     <connections>
